{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 95,
  "lineage": "4719536e-8815-f8e8-cfa4-958fe2d32476",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Webserver-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d270faaa4a81e76",
            "association_id": "eipassoc-0f9c16333d478a718",
            "domain": "vpc",
            "id": "eipalloc-02d270faaa4a81e76",
            "instance": "i-0acd61f9dc4bc902d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d09d01a2fa580391",
            "private_dns": "ip-10-0-1-38.ec2.internal",
            "private_ip": "10.0.1.38",
            "public_dns": "ec2-34-195-30-169.compute-1.amazonaws.com",
            "public_ip": "34.195.30.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Webserver",
            "aws_security_group.webserver-sg",
            "aws_subnet.webserver-subnet",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006dcf34c09e50022",
            "arn": "arn:aws:ec2:us-east-1:025813252441:instance/i-0acd61f9dc4bc902d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0acd61f9dc4bc902d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "ITWORX",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d09d01a2fa580391",
            "private_dns": "ip-10-0-1-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.38",
            "public_ip": "18.208.197.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06de88e94d33aab9a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e605629cfbf4678",
            "tags": {
              "Name": "Webserver"
            },
            "tags_all": {
              "Name": "Webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0179c2964ef1e4f26"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver-sg",
            "aws_subnet.webserver-subnet",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025813252441:internet-gateway/igw-005f7ff5b024904b1",
            "id": "igw-005f7ff5b024904b1",
            "owner_id": "025813252441",
            "vpc_id": "vpc-010d0cb42d160c951"
          },
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025813252441:route-table/rtb-01b929d764719baf8",
            "id": "rtb-01b929d764719baf8",
            "owner_id": "025813252441",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005f7ff5b024904b1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010d0cb42d160c951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-IGW",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbd933d1cdbbfed6",
            "route_table_id": "rtb-01b929d764719baf8",
            "subnet_id": "subnet-01e605629cfbf4678"
          },
          "dependencies": [
            "aws_internet_gateway.web-IGW",
            "aws_route_table.public",
            "aws_subnet.webserver-subnet",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025813252441:security-group/sg-0179c2964ef1e4f26",
            "description": "Allow HTTP traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0179c2964ef1e4f26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "025813252441",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010d0cb42d160c951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webserver-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025813252441:subnet/subnet-01e605629cfbf4678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e605629cfbf4678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025813252441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webserver-subnet"
            },
            "tags_all": {
              "Name": "webserver-subnet"
            },
            "vpc_id": "vpc-010d0cb42d160c951"
          },
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025813252441:vpc/vpc-010d0cb42d160c951",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c564b442d082bab5",
            "default_route_table_id": "rtb-09f302d4e98e8983f",
            "default_security_group_id": "sg-0955e247157464a2a",
            "dhcp_options_id": "dopt-0e1c262350d170fc8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010d0cb42d160c951",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f302d4e98e8983f",
            "owner_id": "025813252441",
            "tags": {
              "Name": "simple-web-app"
            },
            "tags_all": {
              "Name": "simple-web-app"
            }
          }
        }
      ]
    }
  ]
}